09-ingress-basic/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-app1
  name: nginx-app1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
        - name: nginx-app1
          image: stacksimplify/kube-nginxapp1:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: nginx-app1
      restartPolicy: Always
