09-ingress-basic/k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-app1
  name: nginx-app1
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx-app1
  ports:
    - port: 80
      targetPort: 80
